@@ -62,8 +62,10 @@
             <div class="contents">
                 <div class="ib-circle"></div>
                 <div class="ib-circle-hollow"></div>
+                <div class="ib-circle-dot"></div>
                 <div class="ib-square"></div>
                 <div class="ib-square-hollow"></div>
+                <div class="ib-square-dot"></div>
                 <div class="ib-rhombus"></div>
                 <div class="ib-rhombus-hollow"></div>
                 <div class="ib-octagon"></div>
