@@ -450,6 +450,46 @@
   opacity: 0.5;
 }
 
+.ib-square-dot {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+  border: 6px solid #282828;
+  border-radius: 0;
+  width: calc(24px - 12px);
+  height: calc(24px - 12px);
+}
+
+.ib-square-dot:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-square-dot:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-square-dot:before {
+  position: absolute;
+  content: "";
+  left: calc(50% - 3px);
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  background-color: #282828;
+  width: 6px;
+  height: 6px;
+  border-radius: 0;
+}
+
 .ib-circle {
   width: 24px;
   height: 24px;
@@ -496,6 +536,46 @@
   transition: all .2s;
   cursor: pointer;
   opacity: 0.5;
+}
+
+.ib-circle-dot {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+  border: 6px solid #282828;
+  width: calc(24px - 12px);
+  height: calc(24px - 12px);
+  border-radius: 50%;
+}
+
+.ib-circle-dot:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-circle-dot:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-circle-dot:before {
+  position: absolute;
+  content: "";
+  left: calc(50% - 3px);
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  background-color: #282828;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
 }
 
 .ib-rhombus {
