@@ -32,8 +32,10 @@
 */
 @import "scss/shapes/square";
 @import "scss/shapes/square-hollow";
+@import "scss/shapes/square-dot";
 @import "scss/shapes/circle";
 @import "scss/shapes/circle-hollow";
+@import "scss/shapes/circle-dot";
 @import "scss/shapes/rhombus";
 @import "scss/shapes/rhombus-hollow";
 @import "scss/shapes/octagon";
