@@ -1,0 +1,19 @@
+@import "../_foundation/styles";
+
+.ib-circle-dot {
+    @include button-no-before-after;
+    border: $border;
+    width: calc(#{$size} - #{$border-width * 2});
+    height: calc(#{$size} - #{$border-width * 2});
+    border-radius: 50%;
+
+    &:before {
+        @include button-after-before-setup;
+        @include left-center-minus($border-width / 2);
+        @include top-center;
+        background-color: $dark-color;
+        width: $border-width;
+        height: $border-width;
+        border-radius: 50%;
+    }
+}
