@@ -9,6 +9,8 @@ v0.2.0:
 - Added Arrow - Down-Full-Line.
 - Added Other - Close.
 - Added border-radius variable support to more icons.
+- Added Shape - Square-Dot.
+- Added Shape - Circle-Dot.
 
 v0.1.0:
 - All 46 Icons.
